# Lab1AiSD

./: CMakeLists.txt  console.cpp  polyline.cpp  polyline_tests.cpp
